{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Gameplay",
            "id": "7e13e865-dbdc-4968-be66-2be62dec2a49",
            "actions": [
                {
                    "name": "Grow",
                    "type": "Button",
                    "id": "504b0c5f-9af0-467b-8ab5-4a3f7465ec65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "move",
                    "type": "Button",
                    "id": "686922bd-8324-4559-9c87-33dc990d5fb9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "2834dd03-21b9-486c-bd3a-8674c9f0f480",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "22e3aa51-ac89-415a-b1e8-836afccb062d",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56858809-943e-4709-aa63-3f29da25bd72",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de655bb6-755a-4c5c-b85c-68079390d416",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}